...
                                  const Color.fromARGB(255, 77, 143, 177),
                              shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(8),
                              ),
                            ),
                            child: const Text(
                              "REGISTER",
                              style: TextStyle(
                                fontSize: 24,
                                fontFamily: 'Times',
                                fontWeight: FontWeight.w400,
                                color: Color(0xFFFCFCFC),
                              ),
...
                                          message: error.toString(),
                                          color: Colors.red,
                                        );
                                      },
                                      onSuccess: () {
                                        showMySnackBar(
                                          message: 'Registration successful',
                                          color: Colors.green,
                                        );
                                      },
                                      // ! COMMENTED OUT FOR TESTING
                                      // navigation: () {
                                      //   Navigator.push(
...
